<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Register.RegisterActivity">

    <include layout="@layout/app_bar_layout" android:id="@+id/appbar"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_gravity="center_horizontal"
        android:text="Create new Account"
        android:layout_marginTop="20sp"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16sp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/regname"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/etstyle"
            android:hint="Name"
            android:digits=".- _ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890"
            android:inputType="text|textPersonName|textCapSentences"
            android:maxLines="1"
            android:paddingStart="8sp"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/regemail"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:background="@drawable/etstyle"
            android:hint="@string/email"
            android:digits=".-_ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890@"
            android:inputType="textEmailAddress|textWebEmailAddress"
            android:maxLines="1"
            android:paddingStart="8sp"
            android:singleLine="true"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/regpassword"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/etstyle"
            android:digits="._ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890@#$&amp;"
            android:hint="Password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingStart="8sp"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/regcnfrmpassword"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/etstyle"
            android:digits="._ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890@#$&amp;"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingStart="8sp"
            android:singleLine="true"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_password"
            android:id="@+id/rshowPass"/>

        <Button
            android:id="@+id/signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_gravity="right"
            android:layout_marginStart="8dp"
            android:layout_marginTop="50sp"
            android:clickable="true"
            android:onClick="signinBtn"
            android:text="@string/create_account"
            android:textColor="#fff"
            style="@style/Widget.AppCompat.Button.Colored"
            tools:backgroundTint="@color/colorAccent"
            android:focusable="true" />
    </LinearLayout>

</LinearLayout>